# HOLLOW-TREE

./: .gitignore  0.10.65  README.md  accorns-app.py  accorns_app.py  app.py  app_shared.py  config.toml  createDB.sql  llamaIndex.py  pyproject.toml  requirements.txt  requirements_dev.txt  scuirrel_app.py  shared.py
ACCORNS/: README.md  accorns-shared.py  accorns_config.toml  accorns_shared.py  app.py  app_shared.py  config.toml
ACCORNS/accorns_css/: accorns.css
ACCORNS/accorns_js/: accorns.js
ACCORNS/appDB/: appDB_duckdb_vectordb.sql  appDB_postgres.sql  appDB_postgres_accorns.sql  appDB_postgres_demo.sql  appDB_postgres_init.bat  appDB_sqlite.sql  (+8 more)
SCUIRREL/: README.md  SCUIRREL-README.md  app.py  app_shared.py  config.toml  scuirrel-config.toml  scuirrel_config.toml  scuirrel_shared.py
admin/: admin.py  admin_shared.py  shared.py
appData/: accorns.db-journal  createDB.sql  expandVectorDB.sql  schema.drawio
debug/: AWS_postgres_init.bat
docs/: ITadmin.md  data_and_analysis.md  deployment.md  design.md  developer.md  development.md  instructor.md  researcher.md  student.md
modules/: chat_module.py  feedback_module.py  group_join_module.py  groups_module.py  login_module.py  login_reset_module.py  quiz_generation_module.py  quiz_module.py  topics_module.py  user_management.py  user_management_module.py  vectorDB_management_module.py
publish/: generate_publishing_dir.py  publish.py
shared/: shared.py  shared_config.toml
tests/: conftest.py  test_accorns.py  test_apps.py  test_dummy.py  test_scuirrel.py  test_tutorial.py
www/: custom.js  styles.css
(+18 files in other folders)
