[project]
name = "hollow-tree"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.2.2",
    "shiny>=1.0.0",
    "llama-index==0.10.65",
    "llama-index-vector-stores-duckdb==0.1.1",
    "llama-index-vector-stores-postgres",
    "nest_asyncio",
    "duckdb",
    "toml",
    "psycopg2-binary",
    "sqlparse",
    "bcrypt"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest>=8.3.2",
    "playwright>=1.46.0",
    "rsconnect>=0.1.3",
    "pytest-playwright>=0.5.1",
]
